# zed-settings-sync

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md  rustfmt.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: config.rs
common/src/sync/: client.rs  error.rs
common/src/sync/client/: webdav_client.rs
lsp/src/: app_state.rs  backend.rs
xtask-lsp-install/src/: main.rs
