[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
test-support = ["dep:mockall"] # for mockall::automock

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
jsonc-parser = { workspace = true }
octocrab = { workspace = true }
serde = { workspace = true }
zed_extension_api = { workspace = true }
paths = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true, optional = true }
rpassword = "7.4.0"
async-trait = "0.1.89"
reqwest = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
test_support = { path = "../test_support" }
assert_fs = { workspace = true }
ctor = { workspace = true }
